// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmazonS3Client Does not allow upload without credentials 1`] = `[Error: Credentials are required to upload objects to S3.]`;

exports[`AmazonS3Client Making requests Getting an object With credentials Can get an object 1`] = `
Array [
  "https://test-s3-bucket.s3.amazonaws.com/abc123",
  Object {
    "headers": Headers {
      Symbol(map): Object {
        "Authorization": Array [
          "AWS4-HMAC-SHA256 Credential=accessKeyId/20200418/us-east-1/s3/aws4_request,SignedHeaders=host;x-amz-content-sha256;x-amz-date,Signature=11441edef046611ecf352daa2bcae55584d302a31b3390ee865781671caf791a",
        ],
        "x-amz-content-sha256": Array [
          "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
        ],
        "x-amz-date": Array [
          "20200418T123242Z",
        ],
      },
    },
    "verb": "GET",
  },
]
`;

exports[`AmazonS3Client Making requests Getting an object With credentials Can get an object from a different region 1`] = `
Array [
  "https://test-s3-bucket.s3-us-west-1.amazonaws.com/abc123",
  Object {
    "headers": Headers {
      Symbol(map): Object {
        "Authorization": Array [
          "AWS4-HMAC-SHA256 Credential=accessKeyId/20200418/us-west-1/s3/aws4_request,SignedHeaders=host;x-amz-content-sha256;x-amz-date,Signature=19d94ed314002214315e8e9816ca31c97e7c834f7494c3c61046550f12358c21",
        ],
        "x-amz-content-sha256": Array [
          "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
        ],
        "x-amz-date": Array [
          "20200418T123242Z",
        ],
      },
    },
    "verb": "GET",
  },
]
`;

exports[`AmazonS3Client Making requests Getting an object With credentials Handles a 403 error 1`] = `
Array [
  "https://test-s3-bucket.s3.amazonaws.com/abc123",
  Object {
    "headers": Headers {
      Symbol(map): Object {
        "Authorization": Array [
          "AWS4-HMAC-SHA256 Credential=accessKeyId/20200418/us-east-1/s3/aws4_request,SignedHeaders=host;x-amz-content-sha256;x-amz-date,Signature=11441edef046611ecf352daa2bcae55584d302a31b3390ee865781671caf791a",
        ],
        "x-amz-content-sha256": Array [
          "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
        ],
        "x-amz-date": Array [
          "20200418T123242Z",
        ],
      },
    },
    "verb": "GET",
  },
]
`;

exports[`AmazonS3Client Making requests Getting an object With credentials Handles a 403 error 2`] = `[Error: Amazon S3 responded with status code 403 (Unauthorized)]`;

exports[`AmazonS3Client Making requests Getting an object With credentials Handles a missing object 1`] = `
Array [
  "https://test-s3-bucket.s3.amazonaws.com/abc123",
  Object {
    "headers": Headers {
      Symbol(map): Object {
        "Authorization": Array [
          "AWS4-HMAC-SHA256 Credential=accessKeyId/20200418/us-east-1/s3/aws4_request,SignedHeaders=host;x-amz-content-sha256;x-amz-date,Signature=11441edef046611ecf352daa2bcae55584d302a31b3390ee865781671caf791a",
        ],
        "x-amz-content-sha256": Array [
          "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
        ],
        "x-amz-date": Array [
          "20200418T123242Z",
        ],
      },
    },
    "verb": "GET",
  },
]
`;

exports[`AmazonS3Client Making requests Getting an object With credentials Handles an unexpected error 1`] = `
Array [
  "https://test-s3-bucket.s3.amazonaws.com/abc123",
  Object {
    "headers": Headers {
      Symbol(map): Object {
        "Authorization": Array [
          "AWS4-HMAC-SHA256 Credential=accessKeyId/20200418/us-east-1/s3/aws4_request,SignedHeaders=host;x-amz-content-sha256;x-amz-date,Signature=11441edef046611ecf352daa2bcae55584d302a31b3390ee865781671caf791a",
        ],
        "x-amz-content-sha256": Array [
          "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
        ],
        "x-amz-date": Array [
          "20200418T123242Z",
        ],
      },
    },
    "verb": "GET",
  },
]
`;

exports[`AmazonS3Client Making requests Getting an object With credentials Handles an unexpected error 2`] = `[Error: Amazon S3 responded with status code 500 (Server Error)]`;

exports[`AmazonS3Client Making requests Getting an object With credentials including a session token Can get an object 1`] = `
Array [
  "https://test-s3-bucket.s3.amazonaws.com/abc123",
  Object {
    "headers": Headers {
      Symbol(map): Object {
        "Authorization": Array [
          "AWS4-HMAC-SHA256 Credential=accessKeyId/20200418/us-east-1/s3/aws4_request,SignedHeaders=host;x-amz-content-sha256;x-amz-date;x-amz-security-token,Signature=242129cdc7470382920680b887e5899a56eb94103e11ef9b96a45ee0d2bff5c7",
        ],
        "X-Amz-Security-Token": Array [
          "sessionToken",
        ],
        "x-amz-content-sha256": Array [
          "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
        ],
        "x-amz-date": Array [
          "20200418T123242Z",
        ],
      },
    },
    "verb": "GET",
  },
]
`;

exports[`AmazonS3Client Making requests Getting an object With credentials including a session token Can get an object from a different region 1`] = `
Array [
  "https://test-s3-bucket.s3-us-west-1.amazonaws.com/abc123",
  Object {
    "headers": Headers {
      Symbol(map): Object {
        "Authorization": Array [
          "AWS4-HMAC-SHA256 Credential=accessKeyId/20200418/us-west-1/s3/aws4_request,SignedHeaders=host;x-amz-content-sha256;x-amz-date;x-amz-security-token,Signature=b3f43b86838b915e38f9900e5049870ca53db5792b578403f2d46185cc6bb3f1",
        ],
        "X-Amz-Security-Token": Array [
          "sessionToken",
        ],
        "x-amz-content-sha256": Array [
          "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
        ],
        "x-amz-date": Array [
          "20200418T123242Z",
        ],
      },
    },
    "verb": "GET",
  },
]
`;

exports[`AmazonS3Client Making requests Getting an object With credentials including a session token Handles a 403 error 1`] = `
Array [
  "https://test-s3-bucket.s3.amazonaws.com/abc123",
  Object {
    "headers": Headers {
      Symbol(map): Object {
        "Authorization": Array [
          "AWS4-HMAC-SHA256 Credential=accessKeyId/20200418/us-east-1/s3/aws4_request,SignedHeaders=host;x-amz-content-sha256;x-amz-date;x-amz-security-token,Signature=242129cdc7470382920680b887e5899a56eb94103e11ef9b96a45ee0d2bff5c7",
        ],
        "X-Amz-Security-Token": Array [
          "sessionToken",
        ],
        "x-amz-content-sha256": Array [
          "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
        ],
        "x-amz-date": Array [
          "20200418T123242Z",
        ],
      },
    },
    "verb": "GET",
  },
]
`;

exports[`AmazonS3Client Making requests Getting an object With credentials including a session token Handles a 403 error 2`] = `[Error: Amazon S3 responded with status code 403 (Unauthorized)]`;

exports[`AmazonS3Client Making requests Getting an object With credentials including a session token Handles a missing object 1`] = `
Array [
  "https://test-s3-bucket.s3.amazonaws.com/abc123",
  Object {
    "headers": Headers {
      Symbol(map): Object {
        "Authorization": Array [
          "AWS4-HMAC-SHA256 Credential=accessKeyId/20200418/us-east-1/s3/aws4_request,SignedHeaders=host;x-amz-content-sha256;x-amz-date;x-amz-security-token,Signature=242129cdc7470382920680b887e5899a56eb94103e11ef9b96a45ee0d2bff5c7",
        ],
        "X-Amz-Security-Token": Array [
          "sessionToken",
        ],
        "x-amz-content-sha256": Array [
          "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
        ],
        "x-amz-date": Array [
          "20200418T123242Z",
        ],
      },
    },
    "verb": "GET",
  },
]
`;

exports[`AmazonS3Client Making requests Getting an object With credentials including a session token Handles an unexpected error 1`] = `
Array [
  "https://test-s3-bucket.s3.amazonaws.com/abc123",
  Object {
    "headers": Headers {
      Symbol(map): Object {
        "Authorization": Array [
          "AWS4-HMAC-SHA256 Credential=accessKeyId/20200418/us-east-1/s3/aws4_request,SignedHeaders=host;x-amz-content-sha256;x-amz-date;x-amz-security-token,Signature=242129cdc7470382920680b887e5899a56eb94103e11ef9b96a45ee0d2bff5c7",
        ],
        "X-Amz-Security-Token": Array [
          "sessionToken",
        ],
        "x-amz-content-sha256": Array [
          "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
        ],
        "x-amz-date": Array [
          "20200418T123242Z",
        ],
      },
    },
    "verb": "GET",
  },
]
`;

exports[`AmazonS3Client Making requests Getting an object With credentials including a session token Handles an unexpected error 2`] = `[Error: Amazon S3 responded with status code 500 (Server Error)]`;

exports[`AmazonS3Client Making requests Getting an object Without credentials Can get an object 1`] = `
Array [
  "https://test-s3-bucket.s3.amazonaws.com/abc123",
  Object {
    "headers": Headers {
      Symbol(map): Object {
        "x-amz-content-sha256": Array [
          "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
        ],
        "x-amz-date": Array [
          "20200418T123242Z",
        ],
      },
    },
    "verb": "GET",
  },
]
`;

exports[`AmazonS3Client Making requests Getting an object Without credentials Can get an object from a different region 1`] = `
Array [
  "https://test-s3-bucket.s3-us-west-1.amazonaws.com/abc123",
  Object {
    "headers": Headers {
      Symbol(map): Object {
        "x-amz-content-sha256": Array [
          "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
        ],
        "x-amz-date": Array [
          "20200418T123242Z",
        ],
      },
    },
    "verb": "GET",
  },
]
`;

exports[`AmazonS3Client Making requests Getting an object Without credentials Handles a missing object 1`] = `
Array [
  "https://test-s3-bucket.s3.amazonaws.com/abc123",
  Object {
    "headers": Headers {
      Symbol(map): Object {
        "x-amz-content-sha256": Array [
          "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
        ],
        "x-amz-date": Array [
          "20200418T123242Z",
        ],
      },
    },
    "verb": "GET",
  },
]
`;

exports[`AmazonS3Client Making requests Getting an object Without credentials Handles an unexpected error 1`] = `
Array [
  "https://test-s3-bucket.s3.amazonaws.com/abc123",
  Object {
    "headers": Headers {
      Symbol(map): Object {
        "x-amz-content-sha256": Array [
          "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
        ],
        "x-amz-date": Array [
          "20200418T123242Z",
        ],
      },
    },
    "verb": "GET",
  },
]
`;

exports[`AmazonS3Client Making requests Getting an object Without credentials Handles an unexpected error 2`] = `[Error: Amazon S3 responded with status code 500 (Server Error)]`;

exports[`AmazonS3Client Making requests Getting an object Without credentials Handles missing credentials object 1`] = `
Array [
  "https://test-s3-bucket.s3.amazonaws.com/abc123",
  Object {
    "headers": Headers {
      Symbol(map): Object {
        "x-amz-content-sha256": Array [
          "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
        ],
        "x-amz-date": Array [
          "20200418T123242Z",
        ],
      },
    },
    "verb": "GET",
  },
]
`;

exports[`AmazonS3Client Making requests Uploading an object Throws an error if credentials are not provided 1`] = `[TypeError: Cannot read properties of undefined (reading 'body')]`;

exports[`AmazonS3Client Making requests Uploading an object With credentials Handles an unexpected error code 1`] = `
Array [
  "https://test-s3-bucket.s3.amazonaws.com/abc123",
  Object {
    "body": Object {
      "data": Array [
        97,
        98,
        99,
        49,
        50,
        51,
        45,
        99,
        111,
        110,
        116,
        101,
        110,
        116,
        115,
      ],
      "type": "Buffer",
    },
    "headers": Headers {
      Symbol(map): Object {
        "Authorization": Array [
          "AWS4-HMAC-SHA256 Credential=accessKeyId/20200418/us-east-1/s3/aws4_request,SignedHeaders=host;x-amz-content-sha256;x-amz-date,Signature=1db5024ed7d91ac512762a2c70490754def64dc5ed61e3e98d090233ebe0f79c",
        ],
        "x-amz-content-sha256": Array [
          "f8e4bdb2ca9c0f90b0fe56e32bf509ba44b73e2f52af123832f9ddbfe7e8fafa",
        ],
        "x-amz-date": Array [
          "20200418T123242Z",
        ],
      },
    },
    "verb": "PUT",
  },
]
`;

exports[`AmazonS3Client Making requests Uploading an object With credentials Handles an unexpected error code 2`] = `[Error: Amazon S3 responded with status code 500 (Server Error)]`;

exports[`AmazonS3Client Making requests Uploading an object With credentials Uploads an object 1`] = `
Array [
  "https://test-s3-bucket.s3.amazonaws.com/abc123",
  Object {
    "body": Object {
      "data": Array [
        97,
        98,
        99,
        49,
        50,
        51,
        45,
        99,
        111,
        110,
        116,
        101,
        110,
        116,
        115,
      ],
      "type": "Buffer",
    },
    "headers": Headers {
      Symbol(map): Object {
        "Authorization": Array [
          "AWS4-HMAC-SHA256 Credential=accessKeyId/20200418/us-east-1/s3/aws4_request,SignedHeaders=host;x-amz-content-sha256;x-amz-date,Signature=1db5024ed7d91ac512762a2c70490754def64dc5ed61e3e98d090233ebe0f79c",
        ],
        "x-amz-content-sha256": Array [
          "f8e4bdb2ca9c0f90b0fe56e32bf509ba44b73e2f52af123832f9ddbfe7e8fafa",
        ],
        "x-amz-date": Array [
          "20200418T123242Z",
        ],
      },
    },
    "verb": "PUT",
  },
]
`;

exports[`AmazonS3Client Making requests Uploading an object With credentials Uploads an object to a different region 1`] = `
Array [
  "https://test-s3-bucket.s3-us-west-1.amazonaws.com/abc123",
  Object {
    "body": Object {
      "data": Array [
        97,
        98,
        99,
        49,
        50,
        51,
        45,
        99,
        111,
        110,
        116,
        101,
        110,
        116,
        115,
      ],
      "type": "Buffer",
    },
    "headers": Headers {
      Symbol(map): Object {
        "Authorization": Array [
          "AWS4-HMAC-SHA256 Credential=accessKeyId/20200418/us-west-1/s3/aws4_request,SignedHeaders=host;x-amz-content-sha256;x-amz-date,Signature=35a4edef214657ec5799666681f637951d01b3cbf9ec3754f858ce8b722c026c",
        ],
        "x-amz-content-sha256": Array [
          "f8e4bdb2ca9c0f90b0fe56e32bf509ba44b73e2f52af123832f9ddbfe7e8fafa",
        ],
        "x-amz-date": Array [
          "20200418T123242Z",
        ],
      },
    },
    "verb": "PUT",
  },
]
`;

exports[`AmazonS3Client Making requests Uploading an object With credentials including a session token Handles an unexpected error code 1`] = `
Array [
  "https://test-s3-bucket.s3.amazonaws.com/abc123",
  Object {
    "body": Object {
      "data": Array [
        97,
        98,
        99,
        49,
        50,
        51,
        45,
        99,
        111,
        110,
        116,
        101,
        110,
        116,
        115,
      ],
      "type": "Buffer",
    },
    "headers": Headers {
      Symbol(map): Object {
        "Authorization": Array [
          "AWS4-HMAC-SHA256 Credential=accessKeyId/20200418/us-east-1/s3/aws4_request,SignedHeaders=host;x-amz-content-sha256;x-amz-date;x-amz-security-token,Signature=f50f9b3a7b33b58809a8da7216b68ca8730fd157cc7aef4c945fa5df1a22cd03",
        ],
        "X-Amz-Security-Token": Array [
          "sessionToken",
        ],
        "x-amz-content-sha256": Array [
          "f8e4bdb2ca9c0f90b0fe56e32bf509ba44b73e2f52af123832f9ddbfe7e8fafa",
        ],
        "x-amz-date": Array [
          "20200418T123242Z",
        ],
      },
    },
    "verb": "PUT",
  },
]
`;

exports[`AmazonS3Client Making requests Uploading an object With credentials including a session token Handles an unexpected error code 2`] = `[Error: Amazon S3 responded with status code 500 (Server Error)]`;

exports[`AmazonS3Client Making requests Uploading an object With credentials including a session token Uploads an object 1`] = `
Array [
  "https://test-s3-bucket.s3.amazonaws.com/abc123",
  Object {
    "body": Object {
      "data": Array [
        97,
        98,
        99,
        49,
        50,
        51,
        45,
        99,
        111,
        110,
        116,
        101,
        110,
        116,
        115,
      ],
      "type": "Buffer",
    },
    "headers": Headers {
      Symbol(map): Object {
        "Authorization": Array [
          "AWS4-HMAC-SHA256 Credential=accessKeyId/20200418/us-east-1/s3/aws4_request,SignedHeaders=host;x-amz-content-sha256;x-amz-date;x-amz-security-token,Signature=f50f9b3a7b33b58809a8da7216b68ca8730fd157cc7aef4c945fa5df1a22cd03",
        ],
        "X-Amz-Security-Token": Array [
          "sessionToken",
        ],
        "x-amz-content-sha256": Array [
          "f8e4bdb2ca9c0f90b0fe56e32bf509ba44b73e2f52af123832f9ddbfe7e8fafa",
        ],
        "x-amz-date": Array [
          "20200418T123242Z",
        ],
      },
    },
    "verb": "PUT",
  },
]
`;

exports[`AmazonS3Client Making requests Uploading an object With credentials including a session token Uploads an object to a different region 1`] = `
Array [
  "https://test-s3-bucket.s3-us-west-1.amazonaws.com/abc123",
  Object {
    "body": Object {
      "data": Array [
        97,
        98,
        99,
        49,
        50,
        51,
        45,
        99,
        111,
        110,
        116,
        101,
        110,
        116,
        115,
      ],
      "type": "Buffer",
    },
    "headers": Headers {
      Symbol(map): Object {
        "Authorization": Array [
          "AWS4-HMAC-SHA256 Credential=accessKeyId/20200418/us-west-1/s3/aws4_request,SignedHeaders=host;x-amz-content-sha256;x-amz-date;x-amz-security-token,Signature=e846064053af5730311f5a8dd565139c9fdc9de4f9d1c12b8f2f77f619b7d2e1",
        ],
        "X-Amz-Security-Token": Array [
          "sessionToken",
        ],
        "x-amz-content-sha256": Array [
          "f8e4bdb2ca9c0f90b0fe56e32bf509ba44b73e2f52af123832f9ddbfe7e8fafa",
        ],
        "x-amz-date": Array [
          "20200418T123242Z",
        ],
      },
    },
    "verb": "PUT",
  },
]
`;

exports[`AmazonS3Client Rejects invalid S3 bucket names 1`] = `"A S3 bucket name must be provided"`;

exports[`AmazonS3Client Rejects invalid S3 bucket names 2`] = `"The bucket name \\"-abc\\" is invalid. A S3 bucket name must start with a lowercase alphanumerical character."`;

exports[`AmazonS3Client Rejects invalid S3 bucket names 3`] = `"The bucket name \\"a!bc\\" is invalid. A S3 bucket name must only contain lowercase alphanumerical characters, dashes, and periods and must be between 3 and 63 characters long."`;

exports[`AmazonS3Client Rejects invalid S3 bucket names 4`] = `"The bucket name \\"a\\" is invalid. A S3 bucket name must only contain lowercase alphanumerical characters, dashes, and periods and must be between 3 and 63 characters long."`;

exports[`AmazonS3Client Rejects invalid S3 bucket names 5`] = `"The bucket name \\"10.10.10.10\\" is invalid. A S3 bucket name must not be formatted as an IP address."`;

exports[`AmazonS3Client Rejects invalid S3 bucket names 6`] = `"The bucket name \\"abc..d\\" is invalid. A S3 bucket name must not have consecutive periods or dashes adjacent to periods."`;

exports[`AmazonS3Client Rejects invalid S3 bucket names 7`] = `"The bucket name \\"abc.-d\\" is invalid. A S3 bucket name must not have consecutive periods or dashes adjacent to periods."`;

exports[`AmazonS3Client Rejects invalid S3 bucket names 8`] = `"The bucket name \\"abc-.d\\" is invalid. A S3 bucket name must not have consecutive periods or dashes adjacent to periods."`;

exports[`AmazonS3Client Rejects invalid S3 bucket names 9`] = `"The bucket name \\"abc-\\" is invalid. A S3 bucket name must not end in a dash."`;
